@@ -9,9 +9,24 @@ notifications:
 
 
 matrix:
+  fast_finish: true
   include:
     - os: linux
       python: "2.7"
+      # Tell travis we want debian trusty
+      sudo: required
+      dist: trusty
+      env:
+        - TESTATTR="'not huge and not known_failing'"
+      addons:
+        apt:
+          packages:
+            - astyle
+            - cppcheck
+            - enchant
+
+    - os: linux
+      python: "3.5"
       # Tell travis we want debian trusty
       sudo: required
       dist: trusty
