@@ -1,3 +1,7 @@
+2016-09-21  Tim Head  <betatim@gmail.com>
+
+   * .travis.yml: add python 3.5 to the build matrix and allow fast finishing
+
 2016-09-20  Titus Brown  <titus@idyll.org>
 
    * khmer/utils.py: fixed bug in broken_paired_reader when short reads
